Wed Jun 16 15:40:21 BST 2004  Olly Betts <olly@survex.com>

	* backends/inmemory/inmemory_database.h: Implemented get_lastdocid()
	  for InMemory backend.

Wed Jun 16 02:39:41 BST 2004  Olly Betts <olly@survex.com>

	* configure.in: Note the value of LIBRARY_VERSION_INFO which 0.8.1
	  would get if it were released now.

Wed Jun 16 02:39:11 BST 2004  Robert Pollak <robert.pollak@fabasoft.com>

	* api/omdatabase.cc, include/xapian/database.h,
	  backends/database.cc, common/database.h,
	  backends/quartz/quartz_database.cc, backends/quartz/quartz_database.h,
	  backends/quartz/quartz_record.cc, backends/quartz/quartz_record.h:
	  New method Database::get_lastdocid for re-synchronizing an old
	  quartz index.

Wed Jun 16 02:05:07 BST 2004  Richard Boulton <richard@tartarus.org>
 
 	* matcher/multimatch.cc: When collapsing, keep track of the number
 	  of collapses performed, and use this information to modify the
 	  bounds and estimate of the number of matches.
 	* tests/api_db.cc: Added tests for this.
 	* include/xapian/enquire.h: Update documentation comments for
 	  MSet::get_matches_*() functions to make clear that collapsing and
 	  cutoffs are taken into account.  (Previously, the most likely
 	  interpretation of the comments was that they wouldn't be taken
 	  into account, but the implementation was that percentage cutoffs
 	  were taken into account.)  Due to this ambiguity, I think it is
 	  reasonable to say this isn't an API change.
 
Wed Jun 16 01:55:29 BST 2004  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: Rearranged code so that the behaviour can
	  be easily seen to be unchanged, but so that it's closer to the
	  result of applying Richard's patch for bug #31.

Wed Jun 16 01:27:09 BST 2004  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: Trimmed extra whitespace.

Tue Jun 15 15:40:11 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.cc: Fixed PostlistChunkReader to