@@ -1,3 +1,9 @@
+Thu Jun 17 03:44:21 BST 2004  Olly Betts <olly@survex.com>
+
+	* backends/quartz/quartz_postlist.cc: Back out incorrect change from
+	  "Fri May 07 03:16:29 BST 2004".  We do need to call get_or_make_tag
+	  in this case because we're modifying the tag.
+
 Wed Jun 16 15:40:21 BST 2004  Olly Betts <olly@survex.com>
 
 	* backends/inmemory/inmemory_database.h: Implemented get_lastdocid()
